a new InfoMap implementation for rewiring